--- a/toolsrc/CMakeLists.txt
+++ b/toolsrc/CMakeLists.txt
@@ -66,3 +66,13 @@ endif()
 set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads REQUIRED)
 target_link_libraries(vcpkg PRIVATE Threads::Threads)
+if(GCC)
+    include(CheckCXXSourceCompiles)
+    set(CMAKE_REQUIRED_LIBRARIES backtrace)
+    check_cxx_source_compiles("#include <backtrace.h>
+                               int main() { return backtrace_full == nullptr ? 1 : 0; }" SUPPORTS_BACKTRACE)
+endif()
+if(SUPPORTS_BACKTRACE)
+  add_definitions(-DSUPPORTS_BACKTRACE)
+  target_link_libraries(vcpkg PRIVATE backtrace)
+endif()
