--- a/scripts/templates/debug.pc.in
+++ b/scripts/templates/debug.pc.in
@@ -6,7 +6,7 @@ includedir=${prefix}/include
 Name: @PORT@
 URL: @PORT_HOMEPAGE@
 Description: @PORT_DESCRIPTION@
-Version: @PORT_COMPATIBLE_VERSION@
+Version: @PORT_VERSION@
 Requires: @PORT_REQUIRES_DEBUG@
 Libs: -L${libdir} @PORT_LIBS_DEBUG@
 Cflags: -I${includedir}
