--- a/ports/glib/CMakeLists.txt
+++ b/ports/glib/CMakeLists.txt
@@ -30,8 +30,6 @@ if(CMAKE_BUILD_TYPE STREQUAL Debug)
     set(PCRE_SUFFIX d)
 endif()
 find_library(PCRE_LIBRARY NAMES pcre${PCRE_SUFFIX} pcre)
-# libiconv
-find_package(unofficial-iconv REQUIRED)
 # libffi
 find_path(FFI_INCLUDE_DIR ffi.h)
 find_library(FFI_LIBRARY NAMES ffi libffi)
@@ -44,6 +42,8 @@ if(APPLE)
 endif()
 
 if(WIN32 OR APPLE)
+    # libiconv
+    find_package(unofficial-iconv REQUIRED)
     # libintl(gettext)
     find_path(LIBINTL_INCLUDE_DIR libintl.h)
     find_library(LIBINTL_LIBRARY NAMES intl libintl)
@@ -131,10 +131,10 @@ if(NOT WIN32)
 endif()
 add_library(glib ${GLIB_SOURCES})
 target_compile_definitions(glib PRIVATE GLIB_COMPILATION G_LOG_DOMAIN="GLib" LIBDIR="")
-target_link_libraries(glib PRIVATE ${PCRE_LIBRARY} unofficial::iconv::libiconv unofficial::iconv::libcharset ${LIBINTL_LIBRARY})
+target_link_libraries(glib PRIVATE ${PCRE_LIBRARY} ${LIBINTL_LIBRARY})
 if(WIN32)
     target_compile_definitions(glib PRIVATE USE_SYSTEM_PCRE)
-    target_link_libraries(glib PRIVATE ws2_32 winmm advapi32 ole32 shell32)
+    target_link_libraries(glib PRIVATE unofficial::iconv::libiconv unofficial::iconv::libcharset ws2_32 winmm advapi32 ole32 shell32)
 else()
     set(THREADS_PREFER_PTHREAD_FLAG ON)
     find_package(Threads REQUIRED)
