--- a/ports/hdf5/CONTROL
+++ b/ports/hdf5/CONTROL
@@ -2,7 +2,7 @@ Source: hdf5
 Version: 1.10.5-7
 Homepage: https://www.hdfgroup.org/downloads/hdf5/
 Description: HDF5 is a data model, library, and file format for storing and managing data
-Build-Depends: zlib, szip
+Build-Depends: zlib
 
 Feature: parallel
 Description: parallel support for HDF5
@@ -10,3 +10,7 @@ Build-Depends: msmpi
 
 Feature: cpp
 Description: Builds cpp lib
+
+Feature: szip
+Description: szip support for HDF5
+Build-Depends: szip
