[liblzma] add pthread dependecy on linux

--- a/ports/liblzma/CMakeLists.txt
+++ b/ports/liblzma/CMakeLists.txt
@@ -139,6 +139,9 @@ endif()
 if(BUILD_SHARED_LIBS)
     target_compile_definitions(LibLZMA PRIVATE -DDLL_EXPORT)
     target_compile_definitions(LibLZMA PUBLIC -DLIBLZMADLL_EXPORTS)
+    if(MSVC)
+        target_link_libraries(LibLZMA pthread)
+    endif()
 else()
     target_compile_definitions(LibLZMA PUBLIC -DLZMA_API_STATIC)
 endif()
