--- a/ports/liblzma/CMakeLists.txt
+++ b/ports/liblzma/CMakeLists.txt
@@ -139,7 +139,7 @@ endif()
 if(BUILD_SHARED_LIBS)
     target_compile_definitions(LibLZMA PRIVATE -DDLL_EXPORT)
     target_compile_definitions(LibLZMA PUBLIC -DLIBLZMADLL_EXPORTS)
-    if(MSVC)
+    if(NOT MSVC)
         target_link_libraries(LibLZMA pthread)
     endif()
 else()
