[hdf5] our defaults

--- a/ports/hdf5/CONTROL
+++ b/ports/hdf5/CONTROL
@@ -2,7 +2,7 @@ Source: hdf5
 Version: 1.10.5-12
 Homepage: https://www.hdfgroup.org/downloads/hdf5/
 Description: HDF5 is a data model, library, and file format for storing and managing data
-Default-Features: zlib, parallel, tools
+Default-Features: zlib, tools
 Supports: !uwp
 
 Feature: parallel
