--- a/scripts/templates/debug.pc.in
+++ b/scripts/templates/debug.pc.in
@@ -9,4 +9,4 @@ Description: @PORT_DESCRIPTION@
 Version: @PORT_VERSION@
 Requires: @PORT_REQUIRES_DEBUG@
 Libs: -L${libdir} @PORT_LIBS_DEBUG@
-Cflags: -I${includedir}
+Cflags: -I${includedir} @PORT_CFLAGS_DEBUG@
