--- a/ports/qt5-base/CONTROL
+++ b/ports/qt5-base/CONTROL
@@ -2,7 +2,7 @@ Source: qt5-base
 Version: 5.15.0
 Homepage: https://www.qt.io/
 Description: Qt5 Application Framework Base Module. Includes Core, GUI, Widgets, Networking, SQL, Concurrent and other essential qt components.
-Build-Depends: zlib, libjpeg-turbo, libpng, freetype, pcre2, harfbuzz, sqlite3, double-conversion, openssl, angle (!windows), egl-registry, icu (!uwp)
+Build-Depends: zlib, libjpeg-turbo, libpng, freetype (windows), pcre2, harfbuzz, sqlite3, double-conversion, openssl, angle (!windows), egl-registry, icu (!uwp)
 
 Feature: latest
 Description: Build latest qt version (5.15.0) instead of LTS (latest and LTS are currently the same)
