fix linux build

--- a/.gitignore
+++ b/.gitignore
@@ -286,7 +286,7 @@ __pycache__/
 *.code-workspace
 /buildtrees/
 /build*/
-/downloads/
+downloads
 /installed*/
 /packages/
 /scripts/buildsystems/tmp/
@@ -295,20 +295,6 @@ __pycache__/
 /toolsrc/windows-bootstrap/msbuild.x86.release/
 /toolsrc/windows-bootstrap/msbuild.x64.debug/
 /toolsrc/windows-bootstrap/msbuild.x64.release/
-#ignore custom triplets
-/triplets/*
-#add vcpkg-designed triplets back in
-!/triplets/arm-uwp.cmake
-!/triplets/arm64-windows.cmake
-!/triplets/x64-linux.cmake
-!/triplets/x64-osx.cmake
-!/triplets/x64-uwp.cmake
-!/triplets/x64-windows-static.cmake
-!/triplets/x64-windows.cmake
-!/triplets/x86-windows.cmake
-
-!/triplets/community
-!/triplets/community/**
 
 *.exe
 *.zip
